day3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ing
  labels:
    name: cs-ing
    app: codeserver
  namespace: cs
spec:
  ingressClassName: nginx
  rules:
  - host: cs-146.190.195.82.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-svc
            port:
              number: 8443
